src/LogisimFX/verilog/VerilogPreParser.java
// Generated from java-escape by ANTLR 4.11.1
package LogisimFX.verilog;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class VerilogPreParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ALWAYS=1, AM=2, AMAM=3, AMAMAM=4, AND=5, AS=6, ASAS=7, ASGT=8, ASSIGN=9, 
		AT=10, AUTOMATIC=11, BEGIN=12, BUF=13, BUFIFONE=14, BUFIFZERO=15, CA=16, 
		CASE=17, CASEX=18, CASEZ=19, CATI=20, CELL=21, CL=22, CMOS=23, CO=24, 
		CONFIG=25, DEASSIGN=26, DEFAULT=27, DEFPARAM=28, DESIGN=29, DISABLE=30, 
		DL=31, DLFULLSKEW=32, DLHOLD=33, DLNOCHANGE=34, DLPERIOD=35, DLRECOVERY=36, 
		DLRECREM=37, DLREMOVAL=38, DLSETUP=39, DLSETUPHOLD=40, DLSKEW=41, DLTIMESKEW=42, 
		DLWIDTH=43, DQ=44, DT=45, EDGE=46, ELSE=47, EM=48, EMEQ=49, EMEQEQ=50, 
		END=51, ENDCASE=52, ENDCONFIG=53, ENDFUNCTION=54, ENDGENERATE=55, ENDMODULE=56, 
		ENDPRIMITIVE=57, ENDSPECIFY=58, ENDTABLE=59, ENDTASK=60, EQ=61, EQEQ=62, 
		EQEQEQ=63, EQGT=64, EVENT=65, FOR=66, FORCE=67, FOREVER=68, FORK=69, FUNCTION=70, 
		GA=71, GENERATE=72, GENVAR=73, GT=74, GTEQ=75, GTGT=76, GTGTGT=77, HA=78, 
		HIGHZONE=79, HIGHZZERO=80, IF=81, IFNONE=82, INCLUDE=83, INITIAL=84, INOUT=85, 
		INPUT=86, INSTANCE=87, INTEGER=88, JOIN=89, LARGE=90, LB=91, LC=92, LIBLIST=93, 
		LIBRARY=94, LOCALPARAM=95, LP=96, LT=97, LTEQ=98, LTLT=99, LTLTLT=100, 
		MACROMODULE=101, MEDIUM=102, MI=103, MICL=104, MIGT=105, MIINCDIR=106, 
		MO=107, MODULE=108, NAND=109, NEGEDGE=110, NMOS=111, NOR=112, NOSHOWCANCELLED=113, 
		NOT=114, NOTIFONE=115, NOTIFZERO=116, OR=117, OUTPUT=118, PARAMETER=119, 
		PATHPULSEDL=120, PL=121, PLCL=122, PMOS=123, POSEDGE=124, PRIMITIVE=125, 
		PULLDOWN=126, PULLONE=127, PULLUP=128, PULLZERO=129, PULSESTYLE_ONDETECT=130, 
		PULSESTYLE_ONEVENT=131, QM=132, RB=133, RC=134, RCMOS=135, REAL=136, REALTIME=137, 
		REG=138, RELEASE=139, REPEAT=140, RNMOS=141, RP=142, RPMOS=143, RTRAN=144, 
		RTRANIFONE=145, RTRANIFZERO=146, SC=147, SCALARED=148, SHOWCANCELLED=149, 
		SIGNED=150, SL=151, SMALL=152, SPECIFY=153, SPECPARAM=154, STRONGONE=155, 
		STRONGZERO=156, SUPPLYONE=157, SUPPLYZERO=158, TABLE=159, TASK=160, TI=161, 
		TIAM=162, TICA=163, TIME=164, TIVL=165, TRAN=166, TRANIFONE=167, TRANIFZERO=168, 
		TRI=169, TRIAND=170, TRIONE=171, TRIOR=172, TRIREG=173, TRIZERO=174, USE=175, 
		UWIRE=176, VECTORED=177, VL=178, VLVL=179, WAIT=180, WAND=181, WEAKONE=182, 
		WEAKZERO=183, WHILE=184, WIRE=185, WOR=186, XNOR=187, XOR=188, BINARY_BASE=189, 
		COMMENT=190, DECIMAL_BASE=191, ESCAPED_IDENTIFIER=192, EXPONENTIAL_NUMBER=193, 
		FIXED_POINT_NUMBER=194, HEX_BASE=195, OCTAL_BASE=196, SIMPLE_IDENTIFIER=197, 
		STRING=198, SYSTEM_TF_IDENTIFIER=199, UNSIGNED_NUMBER=200, WHITE_SPACE=201, 
		BINARY_VALUE=202, X_OR_Z_UNDERSCORE=203, EDGE_DESCRIPTOR=204, HEX_VALUE=205, 
		FILE_PATH_SPEC=206, OCTAL_VALUE=207, EDGE_SYMBOL=208, LEVEL_ONLY_SYMBOL=209, 
		OUTPUT_OR_LEVEL_SYMBOL=210, BEGIN_KEYWORDS_DIRECTIVE=211, CELLDEFINE_DIRECTIVE=212, 
		DEFAULT_NETTYPE_DIRECTIVE=213, DEFINE_DIRECTIVE=214, ELSE_DIRECTIVE=215, 
		ELSIF_DIRECTIVE=216, END_KEYWORDS_DIRECTIVE=217, ENDCELLDEFINE_DIRECTIVE=218, 
		ENDIF_DIRECTIVE=219, IFDEF_DIRECTIVE=220, IFNDEF_DIRECTIVE=221, INCLUDE_DIRECTIVE=222, 
		LINE_DIRECTIVE=223, NOUNCONNECTED_DRIVE_DIRECTIVE=224, PRAGMA_DIRECTIVE=225, 
		RESETALL_DIRECTIVE=226, TIMESCALE_DIRECTIVE=227, UNCONNECTED_DRIVE_DIRECTIVE=228, 
		UNDEF_DIRECTIVE=229, MACRO_USAGE=230, VERSION_SPECIFIER=231, DEFAULT_NETTYPE_VALUE=232, 
		MACRO_NAME=233, FILENAME=234, MACRO_DELIMITER=235, MACRO_ESC_NEWLINE=236, 
		MACRO_ESC_QUOTE=237, MACRO_QUOTE=238, MACRO_TEXT=239, SOURCE_TEXT=240, 
		TIME_UNIT=241, TIME_VALUE=242, UNCONNECTED_DRIVE_VALUE=243, MACRO_IDENTIFIER=244;
	public static final int
		RULE_source_text = 0, RULE_compiler_directive = 1, RULE_begin_keywords_directive = 2, 
		RULE_celldefine_directive = 3, RULE_default_nettype_directive = 4, RULE_default_nettype_value = 5, 
		RULE_else_directive = 6, RULE_elsif_directive = 7, RULE_end_keywords_directive = 8, 
		RULE_endcelldefine_directive = 9, RULE_endif_directive = 10, RULE_filename = 11, 
		RULE_group_of_lines = 12, RULE_identifier = 13, RULE_ifdef_directive = 14, 
		RULE_ifndef_directive = 15, RULE_include_directive = 16, RULE_level = 17, 
		RULE_line_directive = 18, RULE_macro_delimiter = 19, RULE_macro_esc_newline = 20, 
		RULE_macro_esc_quote = 21, RULE_macro_identifier = 22, RULE_macro_name = 23, 
		RULE_macro_quote = 24, RULE_macro_text = 25, RULE_macro_usage = 26, RULE_nounconnected_drive_directive = 27, 
		RULE_number = 28, RULE_pragma_directive = 29, RULE_pragma_expression = 30, 
		RULE_pragma_keyword = 31, RULE_pragma_name = 32, RULE_pragma_value = 33, 
		RULE_resetall_directive = 34, RULE_source_text_ = 35, RULE_string_ = 36, 
		RULE_text_macro_definition = 37, RULE_text_macro_usage = 38, RULE_time_precision = 39, 
		RULE_time_unit = 40, RULE_timescale_directive = 41, RULE_unconnected_drive_directive = 42, 
		RULE_unconnected_drive_value = 43, RULE_undef_directive = 44, RULE_version_specifier = 45;
	private static String[] makeRuleNames() {
		return new String[] {
			"source_text", "compiler_directive", "begin_keywords_directive", "celldefine_directive", 
			"default_nettype_directive", "default_nettype_value", "else_directive", 
			"elsif_directive", "end_keywords_directive", "endcelldefine_directive", 
			"endif_directive", "filename", "group_of_lines", "identifier", "ifdef_directive", 
			"ifndef_directive", "include_directive", "level", "line_directive", "macro_delimiter", 
			"macro_esc_newline", "macro_esc_quote", "macro_identifier", "macro_name", 
			"macro_quote", "macro_text", "macro_usage", "nounconnected_drive_directive", 
			"number", "pragma_directive", "pragma_expression", "pragma_keyword", 
			"pragma_name", "pragma_value", "resetall_directive", "source_text_", 
			"string_", "text_macro_definition", "text_macro_usage", "time_precision", 
			"time_unit", "timescale_directive", "unconnected_drive_directive", "unconnected_drive_value", 
			"undef_directive", "version_specifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'always'", "'&'", "'&&'", "'&&&'", "'and'", "'*'", "'**'", "'*>'", 
			"'assign'", "'@'", "'automatic'", "'begin'", "'buf'", "'bufif1'", "'bufif0'", 
			"'^'", "'case'", "'casex'", "'casez'", "'^~'", "'cell'", "':'", "'cmos'", 
			"','", "'config'", "'deassign'", "'default'", "'defparam'", "'design'", 
			"'disable'", "'$'", "'$fullskew'", "'$hold'", "'$nochange'", "'$period'", 
			"'$recovery'", "'$recrem'", "'$removal'", "'$setup'", "'$setuphold'", 
			"'$skew'", "'$timeskew'", "'$width'", "'\"'", "'.'", "'edge'", "'else'", 
			"'!'", "'!='", "'!=='", "'end'", "'endcase'", "'endconfig'", "'endfunction'", 
			"'endgenerate'", "'endmodule'", "'endprimitive'", "'endspecify'", "'endtable'", 
			"'endtask'", "'='", "'=='", "'==='", "'=>'", "'event'", "'for'", "'force'", 
			"'forever'", "'fork'", "'function'", null, "'generate'", "'genvar'", 
			"'>'", "'>='", "'>>'", "'>>>'", "'#'", "'highz1'", "'highz0'", "'if'", 
			"'ifnone'", "'include'", "'initial'", "'inout'", "'input'", "'instance'", 
			"'integer'", "'join'", "'large'", "'['", "'{'", "'liblist'", "'library'", 
			"'localparam'", "'('", "'<'", "'<='", "'<<'", "'<<<'", "'macromodule'", 
			"'medium'", "'-'", "'-:'", "'->'", "'-incdir'", "'%'", "'module'", "'nand'", 
			"'negedge'", "'nmos'", "'nor'", "'noshowcancelled'", "'not'", "'notif1'", 
			"'notif0'", "'or'", "'output'", "'parameter'", "'PATHPULSE$'", "'+'", 
			"'+:'", "'pmos'", "'posedge'", "'primitive'", "'pulldown'", "'pull1'", 
			"'pullup'", "'pull0'", "'pulsestyle_ondetect'", "'pulsestyle_onevent'", 
			"'?'", "']'", "'}'", "'rcmos'", "'real'", "'realtime'", "'reg'", "'release'", 
			"'repeat'", "'rnmos'", "')'", "'rpmos'", "'rtran'", "'rtranif1'", "'rtranif0'", 
			"';'", "'scalared'", "'showcancelled'", "'signed'", "'/'", "'small'", 
			"'specify'", "'specparam'", "'strong1'", "'strong0'", "'supply1'", "'supply0'", 
			"'table'", "'task'", "'~'", "'~&'", "'~^'", "'time'", "'~|'", "'tran'", 
			"'tranif1'", "'tranif0'", "'tri'", "'triand'", "'tri1'", "'trior'", "'trireg'", 
			"'tri0'", "'use'", "'uwire'", "'vectored'", "'|'", "'||'", "'wait'", 
			"'wand'", "'weak1'", "'weak0'", "'while'", "'wire'", "'wor'", "'xnor'", 
			"'xor'", null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "'celldefine'", null, null, null, null, "'end_keywords'", "'endcelldefine'", 
			null, null, null, null, null, "'nounconnected_drive'", null, "'resetall'", 
			null, null, null, null, null, null, null, null, "'``'", null, "'`\\`\"'", 
			"'`\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ALWAYS", "AM", "AMAM", "AMAMAM", "AND", "AS", "ASAS", "ASGT", 
			"ASSIGN", "AT", "AUTOMATIC", "BEGIN", "BUF", "BUFIFONE", "BUFIFZERO", 
			"CA", "CASE", "CASEX", "CASEZ", "CATI", "CELL", "CL", "CMOS", "CO", "CONFIG", 
			"DEASSIGN", "DEFAULT", "DEFPARAM", "DESIGN", "DISABLE", "DL", "DLFULLSKEW", 
			"DLHOLD", "DLNOCHANGE", "DLPERIOD", "DLRECOVERY", "DLRECREM", "DLREMOVAL", 
			"DLSETUP", "DLSETUPHOLD", "DLSKEW", "DLTIMESKEW", "DLWIDTH", "DQ", "DT", 
			"EDGE", "ELSE", "EM", "EMEQ", "EMEQEQ", "END", "ENDCASE", "ENDCONFIG", 
			"ENDFUNCTION", "ENDGENERATE", "ENDMODULE", "ENDPRIMITIVE", "ENDSPECIFY", 
			"ENDTABLE", "ENDTASK", "EQ", "EQEQ", "EQEQEQ", "EQGT", "EVENT", "FOR", 
			"FORCE", "FOREVER", "FORK", "FUNCTION", "GA", "GENERATE", "GENVAR", "GT", 
			"GTEQ", "GTGT", "GTGTGT", "HA", "HIGHZONE", "HIGHZZERO", "IF", "IFNONE", 
			"INCLUDE", "INITIAL", "INOUT", "INPUT", "INSTANCE", "INTEGER", "JOIN", 
			"LARGE", "LB", "LC", "LIBLIST", "LIBRARY", "LOCALPARAM", "LP", "LT", 
			"LTEQ", "LTLT", "LTLTLT", "MACROMODULE", "MEDIUM", "MI", "MICL", "MIGT", 
			"MIINCDIR", "MO", "MODULE", "NAND", "NEGEDGE", "NMOS", "NOR", "NOSHOWCANCELLED", 
			"NOT", "NOTIFONE", "NOTIFZERO", "OR", "OUTPUT", "PARAMETER", "PATHPULSEDL", 
			"PL", "PLCL", "PMOS", "POSEDGE", "PRIMITIVE", "PULLDOWN", "PULLONE", 
			"PULLUP", "PULLZERO", "PULSESTYLE_ONDETECT", "PULSESTYLE_ONEVENT", "QM", 
			"RB", "RC", "RCMOS", "REAL", "REALTIME", "REG", "RELEASE", "REPEAT", 
			"RNMOS", "RP", "RPMOS", "RTRAN", "RTRANIFONE", "RTRANIFZERO", "SC", "SCALARED", 
			"SHOWCANCELLED", "SIGNED", "SL", "SMALL", "SPECIFY", "SPECPARAM", "STRONGONE", 
			"STRONGZERO", "SUPPLYONE", "SUPPLYZERO", "TABLE", "TASK", "TI", "TIAM", 
			"TICA", "TIME", "TIVL", "TRAN", "TRANIFONE", "TRANIFZERO", "TRI", "TRIAND", 
			"TRIONE", "TRIOR", "TRIREG", "TRIZERO", "USE", "UWIRE", "VECTORED", "VL", 
			"VLVL", "WAIT", "WAND", "WEAKONE", "WEAKZERO", "WHILE", "WIRE", "WOR", 
			"XNOR", "XOR", "BINARY_BASE", "COMMENT", "DECIMAL_BASE", "ESCAPED_IDENTIFIER", 
			"EXPONENTIAL_NUMBER", "FIXED_POINT_NUMBER", "HEX_BASE", "OCTAL_BASE", 
			"SIMPLE_IDENTIFIER", "STRING", "SYSTEM_TF_IDENTIFIER", "UNSIGNED_NUMBER", 
			"WHITE_SPACE", "BINARY_VALUE", "X_OR_Z_UNDERSCORE", "EDGE_DESCRIPTOR", 
			"HEX_VALUE", "FILE_PATH_SPEC", "OCTAL_VALUE", "EDGE_SYMBOL", "LEVEL_ONLY_SYMBOL", 
			"OUTPUT_OR_LEVEL_SYMBOL", "BEGIN_KEYWORDS_DIRECTIVE", "CELLDEFINE_DIRECTIVE", 
			"DEFAULT_NETTYPE_DIRECTIVE", "DEFINE_DIRECTIVE", "ELSE_DIRECTIVE", "ELSIF_DIRECTIVE", 
			"END_KEYWORDS_DIRECTIVE", "ENDCELLDEFINE_DIRECTIVE", "ENDIF_DIRECTIVE", 
			"IFDEF_DIRECTIVE", "IFNDEF_DIRECTIVE", "INCLUDE_DIRECTIVE", "LINE_DIRECTIVE", 
			"NOUNCONNECTED_DRIVE_DIRECTIVE", "PRAGMA_DIRECTIVE", "RESETALL_DIRECTIVE", 
			"TIMESCALE_DIRECTIVE", "UNCONNECTED_DRIVE_DIRECTIVE", "UNDEF_DIRECTIVE", 
			"MACRO_USAGE", "VERSION_SPECIFIER", "DEFAULT_NETTYPE_VALUE", "MACRO_NAME", 
			"FILENAME", "MACRO_DELIMITER", "MACRO_ESC_NEWLINE", "MACRO_ESC_QUOTE", 
			"MACRO_QUOTE", "MACRO_TEXT", "SOURCE_TEXT", "TIME_UNIT", "TIME_VALUE", 
			"UNCONNECTED_DRIVE_VALUE", "MACRO_IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public VerilogPreParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Source_textContext extends ParserRuleContext {
		public List<Compiler_directiveContext> compiler_directive() {
			return getRuleContexts(Compiler_directiveContext.class);
		}
		public Compiler_directiveContext compiler_directive(int i) {
			return getRuleContext(Compiler_directiveContext.class,i);
		}
		public Source_textContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source_text; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VerilogPreParserListener ) ((VerilogPreParserListener)listener).enterSource_text(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VerilogPreParserListener ) ((VerilogPreParserListener)listener).exitSource_text(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VerilogPreParserVisitor ) return ((VerilogPreParserVisitor<? extends T>)visitor).visitSource_text(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Source_textContext source_text() throws RecognitionException {
		Source_textContext _localctx = new Source_textContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_source_text);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==GA) {
				{
				{
				setState(92);
				compiler_directive();
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Compiler_directiveContext extends ParserRuleContext {
		public Begin_keywords_directiveContext begin_keywords_directive() {
			return getRuleContext(Begin_keywords_directiveContext.class,0);
		}
		public Celldefine_directiveContext celldefine_directive() {
			return getRuleContext(Celldefine_directiveContext.class,0);
		}
		public Default_nettype_directiveContext default_nettype_directive() {
			return getRuleContext(Default_nettype_directiveContext.class,0);
		}
		public End_keywords_directiveContext end_keywords_directive() {
			return getRuleContext(End_keywords_directiveContext.class,0);
		}
		public Endcelldefine_directiveContext endcelldefine_directive() {
			return getRuleContext(Endcelldefine_directiveContext.class,0);
		}
		public Ifdef_directiveContext ifdef_directive() {
			return getRuleContext(Ifdef_directiveContext.class,0);
		}
		public Ifndef_directiveContext ifndef_directive() {
			return getRuleContext(Ifndef_directiveContext.class,0);
		}
		public Include_directiveContext include_directive() {
			return getRuleContext(Include_directiveContext.class,0);
		}
		public Line_directiveContext line_directive() {
			return getRuleContext(Line_directiveContext.class,0);
		}
		public Nounconnected_drive_directiveContext nounconnected_drive_directive() {
			return getRuleContext(Nounconnected_drive_directiveContext.class,0);
		}
		public Pragma_directiveContext pragma_directive() {
			return getRuleContext(Pragma_directiveContext.class,0);
		}
		public Resetall_directiveContext resetall_directive() {
			return getRuleContext(Resetall_directiveContext.class,0);
		}
		public Text_macro_definitionContext text_macro_definition() {
			return getRuleContext(Text_macro_definitionContext.class,0);
		}
		public Text_macro_usageContext text_macro_usage() {
			return getRuleContext(Text_macro_usageContext.class,0);
		}
		public Timescale_directiveContext timescale_directive() {
			return getRuleContext(Timescale_directiveContext.class,0);
		}
		public Unconnected_drive_directiveContext unconnected_drive_directive() {
			return getRuleContext(Unconnected_drive_directiveContext.class,0);
		}
		public Undef_directiveContext undef_directive() {
			return getRuleContext(Undef_directiveContext.class,0);
		}
		public Compiler_directiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compiler_directive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VerilogPreParserListener ) ((VerilogPreParserListener)listener).enterCompiler_directive(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VerilogPreParserListener ) ((VerilogPreParserListener)listener).exitCompiler_directive(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VerilogPreParserVisitor ) return ((VerilogPreParserVisitor<? extends T>)visitor).visitCompiler_directive(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Compiler_directiveContext compiler_directive() throws RecognitionException {
		Compiler_directiveContext _localctx = new Compiler_directiveContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_compiler_directive);
		try {
			setState(115);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				begin_keywords_directive();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				celldefine_directive();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(100);
				default_nettype_directive();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(101);
				end_keywords_directive();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(102);
				endcelldefine_directive();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(103);
				ifdef_directive();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(104);
				ifndef_directive();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(105);
				include_directive();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(106);
				line_directive();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(107);
				nounconnected_drive_directive();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(108);
				pragma_directive();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(109);
				resetall_directive();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(110);
				text_macro_definition();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(111);
				text_macro_usage();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(112);
				timescale_directive();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(113);
				unconnected_drive_directive();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(114);
				undef_directive();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Begin_keywords_directiveContext extends ParserRuleContext {
		public TerminalNode GA() { return getToken(VerilogPreParser.GA, 0); }
		public TerminalNode BEGIN_KEYWORDS_DIRECTIVE() { return getToken(VerilogPreParser.BEGIN_KEYWORDS_DIRECTIVE, 0); }
		public List<TerminalNode> DQ() { return getTokens(VerilogPreParser.DQ); }
		public TerminalNode DQ(int i) {
			return getToken(VerilogPreParser.DQ, i);
		}
		public Version_specifierContext version_specifier() {
			return getRuleContext(Version_specifierContext.class,0);
		}
		public Begin_keywords_directiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_begin_keywords_directive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VerilogPreParserListener ) ((VerilogPreParserListener)listener).enterBegin_keywords_directive(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VerilogPreParserListener ) ((VerilogPreParserListener)listener).exitBegin_keywords_directive(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VerilogPreParserVisitor ) return ((VerilogPreParserVisitor<? extends T>)visitor).visitBegin_keywords_directive(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Begin_keywords_directiveContext begin_keywords_directive() throws RecognitionException {
		Begin_keywords_directiveContext _localctx = new Begin_keywords_directiveContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_begin_keywords_directive);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(GA);
			setState(118);
			match(BEGIN_KEYWORDS_DIRECTIVE);
			setState(119);
			match(DQ);
			setState(120);
			version_specifier();
			setState(121);
			match(DQ);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
